--- a/clinica_online/src/app/pages/turnos/turnos.component.html
+++ b/clinica_online/src/app/pages/turnos/turnos.component.html
@@ -147,7 +147,7 @@
         <div class="input-group-prepend">
           <span class="input-group-text">Comentario</span>
         </div>
-        <textarea class="form-control" [(ngModel)]="comentarioCancelacion"></textarea>
+        <textarea class="form-control" [(ngModel)]="comentarioCancelacion" style="margin-right: 0.5em;"></textarea>
       </div>
 
       <!-- Modal footer -->
