--- a/clinica_online/src/app/pages/solicitar-turno/solicitar-turno.component.css
+++ b/clinica_online/src/app/pages/solicitar-turno/solicitar-turno.component.css
@@ -372,3 +372,23 @@ animation: rotation 1s linear infinite;
   width: 650px;
   overflow:hidden; overflow-y:scroll;
 }
+
+.loader {
+  width: 24px;
+  height: 24px;
+  border: 5px solid #1d1c1ce3;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  }
+
+  @keyframes rotation {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+  }
