--- a/clinica_online/src/app/pages/solicitar-turno/solicitar-turno.component.html
+++ b/clinica_online/src/app/pages/solicitar-turno/solicitar-turno.component.html
@@ -91,7 +91,7 @@
                                     <div class="col-12">
                                         <button class="button-33 mt-0" role="button" [disabled]="this.horarioSeleccionado == null" 
                                         data-bs-toggle="modal" data-bs-target="#selectPaciente"> 
-                                            <i class="fa-solid fa-calendar"></i>
+                                        <i class="fa-solid fa-users-medical"></i>
                                             SELECCIONAR PACIENTE
                                         </button>
                                     </div>  
