--- a/clinica_online/src/app/pages/bienvenida/bienvenida.component.html
+++ b/clinica_online/src/app/pages/bienvenida/bienvenida.component.html
@@ -7,19 +7,20 @@
             <div class="container">
                 <div class="row">
                     <div class="card col-9 offset-1 scale-up-top" style="height: 450px; margin-left: 1em;">
-                        <img class="card-img-top mt-2" [src]="icon" alt="ico" [ngStyle]="{'width':'6.5rem'}">
+                        <img class="card-img-top mt-2" [src]="logo" alt="ico" [ngStyle]="{'width':'7.5rem'}">
                         <div class="card-body">
                           <h2 class="card-title">Clinica OnLine</h2>
                           <p class="card-text" style="font-size: 20px;">
                               Te damos la bienvenida a la Clinica OnLine: <strong>Dacal Health</strong> 
                             </p>
+
                             <p class="card-text">
                                 TP 2 Laboratorio IV UTN-FRA
                             </p>
                             <p class="card-text">
                                 Por favor, inicie sesión para continuar.
                             </p>
-                            <div class="row" style="margin-top: 4em;">
+                            <div class="row" style="margin-top: 2em;">
                                 <div class="col-6">
                                     <button class="button-33" role="button" (click)="onClickRegister()">
                                         <i class="fa-solid fa-user-plus"></i>
