--- a/clinica_online/src/app/pages/seleccion-usuarios/seleccion-usuarios.component.html
+++ b/clinica_online/src/app/pages/seleccion-usuarios/seleccion-usuarios.component.html
@@ -56,21 +56,25 @@
                                 class="button-33"
                                 *ngIf="!user.habilitado"
                                 (click)="habilitar(user.uid)">
-                                Habilitar
+                                <strong>HABILITAR</strong>                               
                               </button>
                               <button
                                 class="button-33-deshab"
                                 *ngIf="user.habilitado"
                                 (click)="deshabilitar(user.uid)">
-                                Deshabilitar
+                                <strong>DESHABILITAR</strong>                                
                               </button>
                             </div>
+                            
                             <button
-                              *ngIf="user.perfil == 'paciente' && user.historial"
-                              class="btn-historial"
+                              *ngIf="user.perfil == 'paciente'"
+                              class="button-33"
+                              (click)="cargarPaciente(user)"
                               data-bs-toggle="modal"
-                              data-bs-target="#exampleModal">
-                              Historial
+                              data-bs-target="#modalHistorialPaciente">
+                              
+                              
+                              <strong>HISTORIAL</strong>
                             </button>
                           </td>
                         </tr>
@@ -85,5 +89,87 @@
       
       <app-altas-admin *ngIf="this.view == 'registro'"></app-altas-admin>
 
+</div>
+
+<!-- ################################## MODAL HISTORIAL CLINICO ################################## -->
+<div class="modal fade modal-xl" id="modalHistorialPaciente" tabindex="-1" aria-labelledby="modalHistorialPaciente" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content" *ngIf="this.pacienteSeleccionado != null">
+
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+
+      <!-- Modal body -->
+      <div class="modal-body">
+          <button *ngIf="this.historialClinicoPacienteSeleccionado.length > 0"
+          type="button" class="btn btn-info" data-bs-dismiss="modal"
+          (click)="crearPDF()">
+          <i class="fa-solid fa-file-pdf"></i>
+            DESCARGAR PDF
+          </button>
+          <div style="text-align: center;">
+              <h4 class="modal-title" style="color:rgb(47, 72, 214); font-size: 48px;">HISTORIAL CLINICO</h4>
+          </div>
+      </div>
+      
+      <div *ngIf="this.historialClinicoPacienteSeleccionado.length > 0">
+        <div id="pdf">
+          <div style="margin-left: 2em;">
+
+              <div style="text-align: center;">
+                  <span style="font-weight: 700; font-size: 20px;">{{this.pacienteSeleccionado.lastName}}, {{this.pacienteSeleccionado.name}} </span>  
+  
+                  <p> {{fechaActual}}</p>
+  
+                  <img [src]='logo' alt="ico" style="width: 120px; border-radius: 50%;">
+  
+                  <p style="font-size: 22px;">Clinica OnLine: <strong>DACAL HEALTH</strong></p>
+              </div>
+
+              <hr>
+              <div *ngFor="let h of historialClinicoPacienteSeleccionado">
+                  <p style="margin-top: 1em;">Fecha: <strong>{{h.dia}} {{h.horario}}</strong></p>
+                  <p>Especialidad: <strong>{{h.especialidad}}</strong></p>
+                  <p>Especialista: <strong>{{h.nombreEspecialista}}</strong></p>
+                  <p>Reseña: <strong>{{h.resenia}}</strong></p>
+                  <p>Altura: <strong>{{h.altura}} mts</strong></p>
+                  <p>Peso: <strong>{{h.peso}} kgs</strong></p>
+                  <p>Temperatura: <strong>{{h.temperatura}} C°</strong></p>
+                  <p>Presion: <strong>{{h.presion}} </strong></p>
+                  <hr>
+              </div>
+            </div>
+        </div>
+      </div>
+
+      <div *ngIf="this.historialClinicoPacienteSeleccionado.length == 0">
+        <div style="text-align: center;">
+          <span style="font-weight: 700; font-size: 20px;">{{this.pacienteSeleccionado.lastName}}, {{this.pacienteSeleccionado.name}} </span>  
+
+          <p> {{fechaActual}}</p>
+
+          <img [src]='logo' alt="ico" style="width: 120px; border-radius: 50%;">
+
+          <p style="font-size: 22px;">Clinica OnLine: <strong>DACAL HEALTH</strong></p>
+
+          <hr>
+
+          <p>No tiene historia clínica.</p>
+      </div>
+
+      </div>
+
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
+          OK
+        </button>
+      </div>
+
+    </div>
+  </div>
 </div>
 
